fixing img on safari - mobile view

--- a/src/assets/styles/_resets.scss
+++ b/src/assets/styles/_resets.scss
@@ -7,4 +7,5 @@
 body {
   overflow-x: hidden;
   background-color: $light;
+  -webkit-text-size-adjust: 100%;
 }
